# SentinelCore

./: .gitignore  CMakeLists.txt  LICENSE  README.md  toolchain.cmake
.cache/clangd/index/: ap3216c_linux.c.2E9337341E2CF604.idx  ap3216c_linux.h.4993BF9545EAF054.idx  ap3216c_linux.h.790EC46722A3D87C.idx  cJSON.c.2802C023306DC400.idx  cJSON.h.E7D9A104D1C6C096.idx  device_monitor.c.89320F62CF238FC3.idx  device_monitor.h.15C71BAE4F652356.idx  light_sensor.c.E6581A0BED785057.idx  light_sensor.h.73AC554DC0D28084.idx  main.c.464DB8410DA0B518.idx  mqtt_client.c.C5247EB8D7822078.idx  mqtt_client.h.089B24443F9CCB32.idx
clientTools/src/: main.c
docs/: 协议规范.md
sentinel/include/modules/: mqtt_client.h
sentinel/src/: main.c
sentinel/src/config/: sentinel_config.json
sentinel/src/modules/device_monitor/: device_monitor.c  device_monitor.h
sentinel/src/modules/light_sensor/: ap3216c_linux.c  ap3216c_linux.h  light_sensor.c  light_sensor.h
sentinel/src/modules/mqtt_client/: mqtt_client.c  mqtt_client.h
sentinel/tests/: cJSON_test.c  device_monitor_test.c  light_sensor_test.c
server/src/: main.c
